--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,40 +1,13 @@
-@import "modules/settings";
-
-/* apply a natural box layout model to all elements */
-*, *:before, *:after {
-  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
-}
-
-html {
-  height: 100%;
-}
-
-body {
-  height: 100%;
-}
-
 .column.small-centered, .columns.small-centered {
   position: fixed;
 }
 
-h1 {
-  font-size: 2.00rem;
-  margin-top: 30px;
-  line-height: 1.2;
-}
-
-/* link hover transitions */
-a:hover {
-  -o-transition:.5s;
-  -ms-transition:.5s;
-  -moz-transition:.5s;
-  -webkit-transition:.5s;
-  transition:.5s;
-  color: lightgray;
-}
-
 .top-nav {
   margin: 20px 0 20px 0;
+}
+
+.top-nav a {
+  margin-left: 20px;
 }
 
 .logo {
@@ -55,24 +28,11 @@ a:hover {
   width: 10rem;
 }
 
-.top-nav a {
-  margin-left: 20px;
-}
-
-.columns {
-  /* border: 1px solid black; */
-}
-
-hr {
-  color: black;
-}
-
 /* burger icon */
 .box-shadow-menu {
   position: relative;
   padding-left: 1.25em;
 }
-
 .box-shadow-menu:before {
   content: "";
   position: absolute;
@@ -81,9 +41,7 @@ hr {
   width: 1em;
   height: 0.15em;
   background: black;
-  box-shadow:
-  0 0.25em 0 0 black,
-  0 0.5em 0 0 black;
+  box-shadow: 0 0.25em 0 0 black, 0 0.5em 0 0 black;
 }
 
 /* code sections */
@@ -94,11 +52,16 @@ pre {
   margin-bottom: 1.11111rem;
   padding: 1.11111rem;
   background: #f2f2f2;
-  white-space: pre-wrap;       /* css-3 */
-  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-  white-space: -pre-wrap;      /* Opera 4-6 */
-  white-space: -o-pre-wrap;    /* Opera 7 */
-  word-wrap: break-word;       /* Internet Explorer 5.5+ */
+  white-space: pre-wrap;
+  /* css-3 */
+  white-space: -moz-pre-wrap;
+  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;
+  /* Opera 4-6 */
+  white-space: -o-pre-wrap;
+  /* Opera 7 */
+  word-wrap: break-word;
+  /* Internet Explorer 5.5+ */
 }
 
 /* code examples */
@@ -113,95 +76,71 @@ pre {
 }
 
 /* sidebar list styles */
+.sidebar-app {
+  /* center sidebar when in mobile */
+}
 .sidebar-app ul {
   list-style-type: none;
   text-align: right;
   margin-top: 0;
   /* text-transform: uppercase; */
 }
-
 .sidebar-app ul li:hover {
-  border-left: 2px solid #2ba6cb;
+  border-left: 2px solid #ff008a;
 }
-
-.hovered {
-  border-left: 2px solid #2ba6cb;
+.sidebar-app ul li.hovered {
+  border-left: 2px solid #ff008a;
 }
-
-/* center sidebar when in mobile */
 @media (max-width: 640px) {
-  .sidebar-app {
+  .sidebar-app .sidebar-app {
     display: none;
   }
-
-  /*
-  .sidebar ul li {
-      font-size: 1.5em;
-  }
-
-  .sidebar ul li:hover {
-      border-left: none;
-  } */
 }
-
-.main-section p {
+.sidebar-app .main-section p {
   margin-left: 10px;
   margin-right: 10px;
 }
-
-.main-section h4 {
+.sidebar-app .main-section h4 {
   margin: 0 10px 0 10px;
 }
-
-ul.off-canvas-list li a:hover {
+.sidebar-app ul.off-canvas-list li a:hover {
   color: white;
 }
-
-div.right.mobile-menu.show-for-small-only {
+.sidebar-app div.right.mobile-menu.show-for-small-only {
   display: none !important;
 }
-
-ul.off-canvas-list li label {
+.sidebar-app ul.off-canvas-list li label {
   padding: 0.1rem 0.9375rem;
   border-top: none !important;
 }
-
-.main-section h1 {
+.sidebar-app .main-section h1 {
   margin: 20px 10px 10px 10px;
 }
-
-.main-section .codex {
+.sidebar-app .main-section .codex {
   margin-left: 10px;
 }
-
 @media screen and (max-width: 640px) {
-  .logo {
+  .sidebar-app .logo {
     margin-left: 98%;
   }
-
-  .medium-9 {
+  .sidebar-app .medium-9 {
     display: none !important;
   }
 }
-
 @media screen and (max-width: 500px) {
-  .logo {
+  .sidebar-app .logo {
     margin-left: 96%;
   }
 }
-
 @media screen and (max-width: 400px) {
-  .logo {
+  .sidebar-app .logo {
     margin-left: 85%;
   }
 }
-
-.right-off-canvas-menu {
+.sidebar-app .right-off-canvas-menu {
   -webkit-overflow-scrolling: touch;
 }
-
-aside.right-off-canvas-menu.move-left {
+.sidebar-app aside.right-off-canvas-menu.move-left {
   left: 250px;
   transition: 1s;
 }
-
