--- a/src/scss/main/partials/_forms.scss
+++ b/src/scss/main/partials/_forms.scss
@@ -1,8 +1,3 @@
-// form field styles
-@import "../modules/fonts";
-@import "../modules/colors";
-
-
 input {
   border-image: url(http://static.fpassets.com/resources/_shared/images/backgrounds/border-50.png);
   font-weight: $normal;
@@ -18,6 +13,11 @@ input {
   line-height: 18px;
   max-width: 95%; // for mobile
   vertical-align: middle;
+}
+
+// icons, checkboxes, radio buttons
+input[type="radio"] {
+  background: url(http://static.fpassets.com/resources/_shared/images/spritesheets/icons_2x.png); // retina, use icons.png for regular
 }
 
 label {
