--- a/src/scss/main/modules/_settings.scss
+++ b/src/scss/main/modules/_settings.scss
@@ -19,3 +19,9 @@ $black: #000000;
 
 // spacing
 $default-spacing: 16px;
+
+// images for borders and backgrounds
+$pink-bg-img: '//static.fpassets.com/resources/_shared/images/backgrounds/border-hotpink.png';
+$light-gray-bg-img: '//static.fpassets.com/resources/_shared/images/backgrounds/border-25.png';
+$gray-bg-img: '//static.fpassets.com/resources/_shared/images/backgrounds/border-50.png';
+$dark-gray-bg-img: '//static.fpassets.com/resources/_shared/images/backgrounds/border-75.png';
