--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,11 @@
 @import "main/partials/base";
 @import "main/partials/headings";
 @import "main/partials/links";
+@import "main/partials/skins";
+@import "main/partials/buttons";
+@import "main/partials/forms";
+@import "main/partials/alerts";
+@import "main/partials/currency";
 
 // free people module styles
 @import "dropdown/dropdown";
