--- a/src/scss/main/partials/_forms.scss
+++ b/src/scss/main/partials/_forms.scss
@@ -1,7 +1,11 @@
+/**
+ * Styles for forms and form field input elements excluding buttons
+ */
+
+
 input {
   border-image: url(http://static.fpassets.com/resources/_shared/images/backgrounds/border-50.png);
-  font-weight: $normal;
-  font-family: $sans;
+  font-family: $sans-serif;
   border: solid 1px #a5a5a5; // failover if HTB doesn't work
   border-image-slice: 1 !important; // need this, but can consolidate into border-image declaration
   border-image-width: 1 !important; // probably don't need these next four at all
@@ -23,9 +27,9 @@ input[type="radio"] {
 label {
   text-transform: uppercase;
   color: $dark-gray;
-  font-family: $sans;
+  font-family: $sans-serif;
   font-size: 11px;
-  font-weight: $bold;
+  font-weight: bold;
   line-height: 16px;
 
   &.error {
