--- a/src/scss/main/modules/_mixins.scss
+++ b/src/scss/main/modules/_mixins.scss
@@ -15,3 +15,23 @@
     @include box-shadow($light-gray 0 2px 3px);
   }
 }
+
+@mixin hand-touched-border($img: $dark-gray-bg-img, $color: $dark-gray, $width: 1, $height: 1, $repeat: repeat) {
+  margin: $default-spacing 0;
+  padding: $default-spacing;
+  border: $color solid #{$width}px;
+  border-image: url($img) $width $height $repeat;
+  background: $white;
+}
+
+// Support for older browsers < IE 11
+@mixin hand-touched-border-box($img: $dark-gray-bg-img) {
+  margin: $default-spacing 0;
+  background: url($img);
+  padding: 1px;
+  > * {
+    display: inline-block;
+    padding: $default-spacing;
+    background-color: $white;
+  }
+}
