--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2371,47 +2371,75 @@ a.serif {
  * Styles for hand-touched borders and backgrounds
  */
 .dark-gray-border-box {
+  position: relative;
   margin: 16px 0;
-  background: url("//static.fpassets.com/resources/_shared/images/backgrounds/border-75.png");
-  padding: 1px;
-}
-.dark-gray-border-box > * {
-  display: inline-block;
+  background: white;
   padding: 16px;
-  background-color: white;
+}
+.dark-gray-border-box:before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  right: 1px;
+  bottom: 1px;
+  border: solid 1px transparent;
+  border-image: url("//static.fpassets.com/resources/_shared/images/backgrounds/border-75.png") 1 1 repeat;
 }
 
 .gray-border-box {
+  position: relative;
   margin: 16px 0;
-  background: url("//static.fpassets.com/resources/_shared/images/backgrounds/border-50.png");
-  padding: 1px;
-}
-.gray-border-box > * {
-  display: inline-block;
+  background: white;
   padding: 16px;
-  background-color: white;
+}
+.gray-border-box:before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  right: 1px;
+  bottom: 1px;
+  border: solid 1px transparent;
+  border-image: url("//static.fpassets.com/resources/_shared/images/backgrounds/border-50.png") 1 1 repeat;
 }
 
 .light-gray-border-box {
+  position: relative;
   margin: 16px 0;
-  background: url("//static.fpassets.com/resources/_shared/images/backgrounds/border-25.png");
-  padding: 1px;
-}
-.light-gray-border-box > * {
-  display: inline-block;
+  background: white;
   padding: 16px;
-  background-color: white;
+}
+.light-gray-border-box:before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  right: 1px;
+  bottom: 1px;
+  border: solid 1px transparent;
+  border-image: url("//static.fpassets.com/resources/_shared/images/backgrounds/border-25.png") 1 1 repeat;
 }
 
 .pink-border-box {
+  position: relative;
   margin: 16px 0;
-  background: url("//static.fpassets.com/resources/_shared/images/backgrounds/border-hotpink.png");
-  padding: 1px;
-}
-.pink-border-box > * {
-  display: inline-block;
+  background: white;
   padding: 16px;
-  background-color: white;
+}
+.pink-border-box:before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  right: 1px;
+  bottom: 1px;
+  border: solid 1px transparent;
+  border-image: url("//static.fpassets.com/resources/_shared/images/backgrounds/border-hotpink.png") 1 1 repeat;
 }
 
 .dark-gray-border {
