--- a/src/scss/main/modules/_mixins.scss
+++ b/src/scss/main/modules/_mixins.scss
@@ -26,12 +26,19 @@
 
 // Support for older browsers < IE 11
 @mixin hand-touched-border-box($img: $dark-gray-bg-img) {
+  position: relative;
   margin: $default-spacing 0;
-  background: url($img);
-  padding: 1px;
-  > * {
-    display: inline-block;
-    padding: $default-spacing;
-    background-color: $white;
+  background: $white;
+  padding: $default-spacing;
+  &:before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    right: 1px;
+    bottom: 1px;
+    border: solid 1px transparent;
+    border-image: url($img) 1 1 repeat;
   }
 }
