--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18,7 +18,7 @@
 }
 
 .content {
-  margin: 20px 0 20px 0;
+  margin: -2em 0 2em 0;
 }
 
 .sidebar-app {
@@ -42,6 +42,13 @@
   height: 0.15em;
   background: black;
   box-shadow: 0 0.25em 0 0 black, 0 0.5em 0 0 black;
+}
+
+.guide-section {
+  margin: 5em 0;
+}
+.guide-section h2[data-offset] {
+  font-size: 2em;
 }
 
 /* code sections */
