--- a/src/scss/main/partials/_skins.scss
+++ b/src/scss/main/partials/_skins.scss
@@ -5,36 +5,49 @@
 @import "../modules/settings";
 @import "../modules/mixins";
 
+.skins-content {
+  margin: $default-spacing 0;
+  padding: $default-spacing;
+}
+
 // nested block element border box
 .dark-gray-border-box {
+  @extend .skins-content;
   @include hand-touched-border-box();
 }
 
 .gray-border-box {
+  @extend .skins-content;
   @include hand-touched-border-box($gray-bg-img);
 }
 
 .light-gray-border-box {
+  @extend .skins-content;
   @include hand-touched-border-box($light-gray-bg-img);
 }
 
 .pink-border-box {
+  @extend .skins-content;
   @include hand-touched-border-box($pink-bg-img);
 }
 
 // border images
 .dark-gray-border {
+  @extend .skins-content;
   @include hand-touched-border();
 }
 
 .gray-border {
+  @extend .skins-content;
   @include hand-touched-border($gray-bg-img);
 }
 
 .light-gray-border {
+  @extend .skins-content;
   @include hand-touched-border($light-gray-bg-img);
 }
 
 .pink-border {
+  @extend .skins-content;
   @include hand-touched-border($pink-bg-img);
 }
