--- a/src/scss/main/partials/_links.scss
+++ b/src/scss/main/partials/_links.scss
@@ -2,8 +2,8 @@
  * Enhanced styles for inline links
  */
 
-@import "../modules/settings";
-@import "../modules/mixins";
+@import "../helpers/settings";
+@import "../helpers/mixins";
 
 a {
   // small version
