--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2285,6 +2285,7 @@ html {
 
 body {
   height: 100%;
+  margin-top: 5em;
 }
 
 p {
@@ -2294,15 +2295,17 @@ p {
 a {
   color: #ff008a;
   text-decoration: none;
+  /*
+  &:visited {
+    color: $indigo;
+    text-decoration: none;
+  }
+  */
 }
 a:hover {
   color: #ff008a;
   text-decoration: none;
   border-bottom: solid 1px #ff008a;
-}
-a:visited {
-  color: #5c66c5;
-  text-decoration: none;
 }
 
 nav {
@@ -2646,58 +2649,61 @@ input:focus, textarea:focus {
 }
 
 .margin-top-small {
-  margin-top: 5px;
+  margin-top: 4px;
 }
 
 .margin-right-small {
-  margin-right: 5px;
+  margin-right: 4px;
 }
 
 .margin-bottom-small {
-  margin-bottom: 5px;
+  margin-bottom: 4px;
 }
 
 .margin-left-small {
-  margin-left: 5px;
+  margin-left: 4px;
 }
 
 .margin-top {
-  margin-top: 15px;
+  margin-top: 16px;
 }
 
 .margin-right {
-  margin-right: 15px;
+  margin-right: 16px;
 }
 
 .margin-bottom {
-  margin-bottom: 15px;
+  margin-bottom: 16px;
 }
 
 .margin-left {
-  margin-left: 15px;
+  margin-left: 16px;
 }
 
 .dropdown {
   position: relative;
-  background: url("http://www.freepeople.com/resources/_shared/images/backgrounds/border-75.png");
-  padding: 1px 1px 1px 1px;
-  margin: 0 8px;
+  border: #3e3e3e solid 1px;
+  border-image: url("//static.fpassets.com/resources/_shared/images/backgrounds/border-75.png") 1 1 repeat;
+  background: white;
+  padding: 1px;
+  margin: 0 0.5em;
 }
 .dropdown.is-opened {
   padding: 1px 1px 0px 1px;
 }
 .dropdown a {
   text-decoration: none;
-  font-size: .9em;
+  border: 0;
 }
 .dropdown a:focus {
   outline: none;
+  border: 0;
 }
 
 .dropdown-trigger {
   background: white;
   display: block;
-  padding: 8px;
+  padding: 0.5em;
   position: relative;
   z-index: 30;
 }
@@ -2712,22 +2718,23 @@ input:focus, textarea:focus {
 }
 
 .dropdown-container {
-  background: url("http://www.freepeople.com/resources/_shared/images/backgrounds/border-75.png");
   position: absolute;
-  padding: 1px;
   top: 33px;
   z-index: 10;
-  left: 0;
+  left: -1px;
 }
 
 .dropdown-menu {
+  border: #3e3e3e solid 1px;
+  border-image: url("//static.fpassets.com/resources/_shared/images/backgrounds/border-75.png") 1 1 repeat;
+  background: white;
   position: relative;
-  z-index: 1000;
+  z-index: 99;
   display: none;
   min-width: 160px;
-  padding: 16px 0 0;
+  padding: 1em 0 0;
   margin: 0;
-  max-height: 151px;
+  max-height: 160px;
   overflow-y: scroll;
   background: white;
   text-align: left;
@@ -2736,21 +2743,21 @@ input:focus, textarea:focus {
 .dropdown-menu .divider {
   overflow: hidden;
   height: 1px;
-  margin: 9px 0;
-  background: #e6e6e6;
+  margin: 0.5em 0;
+  background: #bebebe;
 }
 
 .dropdown-menu > li > a {
   clear: both;
   display: block;
-  padding: 3px 20px;
-  color: #333333;
-  line-height: 1.4;
+  padding: 0.25em 1em;
+  color: #7e7e7e;
 }
 .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
-  color: #262626;
+  color: #bebebe;
   text-decoration: none;
-  background-color: #f5f5f5;
+  background-color: #3e3e3e;
+  border: 0;
 }
 
 .is-opened .dropdown-menu {
