--- a/src/scripts/modules/dropdown/scss/partials/_dropdown.scss
+++ b/src/scripts/modules/dropdown/scss/partials/_dropdown.scss
@@ -1,86 +1,90 @@
 // Name: Dropdown
- 
+@import "main/helpers/settings";
+@import "main/helpers/mixins";
+
+//$default-spacing:16px
+
 .dropdown {
-    position: relative;
-    background: url("http://www.freepeople.com/resources/_shared/images/backgrounds/border-75.png");
-    padding: 1px 1px 1px 1px;
-    margin: 0 8px;
-    &.is-opened {
-        padding: 1px 1px 0px 1px;
-    }
-    a {
-        text-decoration: none;
-        font-size: .9em;
-    }
-    a:focus {
-        outline: none;
-    }
+  position: relative;
+  @include hand-touched-border($dark-gray-bg-img, $dark-gray);
+  padding: 1px;
+  margin: 0 calc-ems($default-spacing/2);
+  &.is-opened {
+    padding: 1px 1px 0px 1px;
+  }
+  a {
+    text-decoration: none;
+    border: 0;
+  }
+  a:focus {
+    outline: none;
+    border: 0;
+  }
 }
- 
+
 .dropdown-trigger {
-    background: $white;
-    display: block;
-    padding: 8px;
-    position: relative;
-    z-index: 30;
-    &:after {
-        content: '';
-        display: inline-block;
-        background-image: url(http://www.freepeople.com/resources/_shared/images/spritesheets/_icons_2x.png);
-        background-size: 400px 1000px;
-        background-position: -156px -476px;
-        width: 15px;
-        height: 11px;
-    }
+  background: $white;
+  display: block;
+  padding: calc-ems($default-spacing/2);
+  position: relative;
+  z-index: 30;
+  &:after {
+    content: '';
+    display: inline-block;
+    background-image: url(http://www.freepeople.com/resources/_shared/images/spritesheets/_icons_2x.png);
+    background-size: 400px 1000px;
+    background-position: -156px -476px;
+    width: 15px;
+    height: 11px;
+  }
 }
- 
+
 .dropdown-container {
-    background: url("http://www.freepeople.com/resources/_shared/images/backgrounds/border-75.png");
-    position: absolute;
-    padding: 1px;
-    top: 33px;
-    z-index: 10;
-    left: 0;
+  position: absolute;
+  top: 33px;
+  z-index: 10;
+  left: -1px;
 }
- 
+
 .dropdown-menu {
-    position: relative;
-    z-index: 1000;
-    display: none;
-    min-width: $dropdown-min-width;
-    padding: 16px 0 0;
-    margin: 0;
-    max-height: 151px;
-    overflow-y: scroll;
-    background: $white;
-    text-align: left;
-    list-style: none;
-    .divider {
-        overflow: hidden;
-        height: 1px;
-        margin: 9px 0;
-        background: $light-grey;
-    }
+  @include hand-touched-border($dark-gray-bg-img, $dark-gray);
+  position: relative;
+  z-index: 99;
+  display: none;
+  min-width: $dropdown-min-width;
+  padding: calc-ems($default-spacing) 0 0;
+  margin: 0;
+  max-height: 160px;
+  overflow-y: scroll;
+  background: $white;
+  text-align: left;
+  list-style: none;
+  .divider {
+    overflow: hidden;
+    height: 1px;
+    margin: calc-ems($default-spacing/2) 0;
+    background: $light-gray;
+  }
 }
- 
+
 .dropdown-menu > li > a {
-    clear: both;
-    display: block;
-    padding: 3px 20px;
-    color: $dark-grey;
-    line-height: 1.4;
-    &:hover,
-    &:focus {
-        color: #262626;
-        text-decoration: none;
-        background-color: #f5f5f5;
-    }
+  clear: both;
+  display: block;
+  padding: calc-ems($default-spacing/4 $default-spacing);
+  color: $gray;
+  &:hover,
+  &:focus {
+    color: $light-gray;
+    text-decoration: none;
+    background-color: $dark-gray;
+    border: 0;
+  }
 }
- 
-.is-opened  .dropdown-menu {
-    display: block;
+
+.is-opened .dropdown-menu {
+  display: block;
 }
- 
+
 .floatLeft {
-    float: left;
+  float: left;
 }
