--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,7 +3,7 @@
 @import "foundation/components/grid";
 @import "foundation/components/visibility";
 
-// free people styles
+// free people main styles
 @import "main/partials/base";
 @import "main/partials/headings";
 @import "main/partials/links";
