--- a/src/scss/main/partials/_buttons.scss
+++ b/src/scss/main/partials/_buttons.scss
@@ -2,8 +2,8 @@
  * Styles for buttons
  */
 
-@import "../modules/settings";
-@import "../modules/mixins";
+@import "../helpers/settings";
+@import "../helpers/mixins";
 @import "compass/css3";
 
 .btn {
