--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,8 +10,9 @@
 @import "main/partials/skins";
 @import "main/partials/buttons";
 @import "main/partials/forms";
-@import "main/partials/alerts";
+
 @import "main/partials/currency";
 
 // free people module styles
 @import "dropdown/dropdown";
+@import "alerts/alerts";
