removed styles from default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,18 +6,10 @@
 <div class="container" id="header">
 	<div class="row">
 		<div class="large-12 columns site-logo">
-			<center><a href="{{ site.baseurl }}"><img src="/a/i/logo/logo.svg" alt=""></a></center>
+			<center><a href="{{ site.baseurl }}"></a></center>
 		</div>
 	</div>
-	<div class="row">
-		<div class="large-12 columns">
-			<ul id="navigation">
-				<li><p><a href="/about/">About</a></p></li>
-				<li><p><a href="/blog">Thoughts</a></p></li>
-				<li><p><a href="https://dl.dropboxusercontent.com/u/5982384/anguyen_resume.pdf" target="_b">Resume</a></p></li>
-			</ul>
-		</div>
-	</div>
+
 </div>
 
 
