added favicon and title

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,20 +5,15 @@
 
 
   <title>
-    {% if page.title == "Home" %}
-    {{ site.title }} {{ site.tagline }}
-    {% else %}
-    {{ page.title }} {{ site.title }}
-    {% endif %}
+    Free People - Women's Boho Clothing & Bohemian Fashion
   </title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/site.css">
 
-
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}public/apple-touch-icon-precomposed.png">
-  <link rel="shortcut icon" href="{{ site.baseurl }}a/i/favicon.png">
+  <link rel="shortcut icon" href="http://www.freepeople.com/favicon.ico">
 
   <!-- RSS -->
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}atom.xml">
