got links working for sub pages and the sub navigation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 			<div class="large-6 small-12 columns promo">
 				<p>Promotional Copy! <a href="#">Link!</a></p>
 			</div>
-			<div class="large-6 small-12 columns">
+			<div class="large-6 small-12 columns hide-for-small-only">
 				<ul class="utility">
 					<li><img src="/a/i/utility/us-flag.svg" alt=""> <img src="/a/i/utility/utility-dd.svg" alt=""></li>
 					<li>Sign In <img src="/a/i/utility/utility-dd.svg" alt=""></li>
@@ -23,11 +23,13 @@
 		<div class="row">
 				<div class="large-12 columns">
 					<ul class="links">
-						<li><a href="#">Shop</a></li>
-						<li><a href="#">FP Me</a></li>
+						<li><a href="/guidelines/">Guidelines</a></li>
+						<li><a href="#">Base CSS</a></li>
+						<li><a href="#">Components</a></li>
 						<li class="fp-logo"><a href="#"><img src="/a/i/logo-header.png" alt=""></a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">FP Presents</a></li>
+						<li><a href="#">Javascript</a></li>
+						<li><a href="#">Mixins</a></li>
+						<li><a href="#">Depracated</a></li>
 					</ul>
 				</div>
 			</div>
